--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <h2>Featured Products</h2>
     <div class="product-grid">
       <div class="product-card">
-        <img src="C:\Users\AULoaner\Desktop\Demo.png" alt="Product 1"/>
+        <img src="Demo.jpg" alt="Product 1"/>
         <h3>Product 1</h3>
         <p>$29.99</p>
         <button>Add to Cart</button>
       </div>
       <div class="product-card">
-        <img src="C:\Users\AULoaner\Desktop\Demo 1.png" alt="Product 2"/>
+        <img src="Demo 1.jpg" alt="Product 2"/>
         <h3>Product 2</h3>
         <p>$39.99</p>
         <button>Add to Cart</button>
       </div>
       <div class="product-card">
-        <img src="C:\Users\AULoaner\Desktop\Demo 3.png" alt="Product 3"/>
+        <img src="Demo 3.jpg" alt="Product 3"/>
         <h3>Product 3</h3>
         <p>$49.99</p>
         <button>Add to Cart</button>
