--- a/index.html
+++ b/index.html
@@ -3,51 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SS Store</title>
+  <title>SG Store</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
 
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo">SS Store</div>
+    <div class="logo">SG Store</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="products.html">Products</a></li>
+      <li><a href="#">Products</a></li>
       <li><a href="cart.html">Cart</a></li>
-      <li><a href="auth.html">Login</a></li>
+      <li><a href="#">Login</a></li>
     </ul>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <header class="hero">
     <h1>Welcome to SG Store</h1>
     <p>Shop the best products at unbeatable prices.</p>
-    <a href="products.html" class="btn">Shop Now</a>
+    <a href="#" class="btn">Shop Now</a>
   </header>
 
-  <!-- Featured Products -->
+  <!-- Products -->
   <section class="featured">
     <h2>Featured Products</h2>
     <div class="product-grid">
       <div class="product-card">
-        <img src="Demo.jpg" alt="Product 1"/>
-        <h3>Product 1</h3>
+        <img src="Demo.jpg" alt="White T-shirt" />
+        <h3>White T-shirt</h3>
         <p>$29.99</p>
-        <button>Add to Cart</button>
+        <button 
+          class="add-to-cart"
+          data-id="1"
+          data-name="White T-shirt"
+          data-price="29.99"
+          data-image="Demo 1.jpg"
+        >Add to Cart</button>
       </div>
+
       <div class="product-card">
-        <img src="Demo 1.jpg" alt="Product 2"/>
-        <h3>Product 2</h3>
+        <img src="Demo 1.jpg" alt="SS Hoodie" />
+        <h3>SS Hoodie</h3>
         <p>$39.99</p>
-        <button>Add to Cart</button>
+        <button 
+          class="add-to-cart"
+          data-id="2"
+          data-name="SS Hoodie"
+          data-price="39.99"
+          data-image="https://cdn.pixabay.com/photo/2016/11/19/17/31/t-shirt-1843798_960_720.png"
+        >Add to Cart</button>
       </div>
+
       <div class="product-card">
-        <img src="Demo 3.jpg" alt="Product 3"/>
-        <h3>Product 3</h3>
+        <img src="Demo3.jpg" alt="Premium Shirt" />
+        <h3>Premium Shirt</h3>
         <p>$49.99</p>
-        <button>Add to Cart</button>
+        <button 
+          class="add-to-cart"
+          data-id="3"
+          data-name="Premium Shirt"
+          data-price="49.99"
+          data-image="https://cdn.pixabay.com/photo/2016/11/19/17/31/t-shirt-1843798_960_720.png"
+        >Add to Cart</button>
       </div>
     </div>
   </section>
@@ -57,5 +76,6 @@
     <p>© 2025 SG Store. All rights reserved.</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
